--- a/index.html
+++ b/index.html
@@ -2,30 +2,146 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Spotify Preview Test</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Now Playing</title>
   <style>
     body {
-      background: black;
-      color: white;
-      font-family: sans-serif;
+      background: #000;
+      margin: 0;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       height: 100vh;
-      text-align: center;
+      overflow: hidden;
+      font-family: sans-serif;
     }
-    button, audio {
-      margin-top: 20px;
-      font-size: 18px;
+
+    .button-wrapper {
+      position: relative;
+      width: 30vw;
+      height: 45vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #treble-button {
+      width: 100%;
+      height: 100%;
+      background: none;
+      border: none;
+      padding: 0;
+      cursor: pointer;
+      z-index: 1;
+    }
+
+    #treble-button img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      filter: brightness(90%);
+    }
+
+    .circle-container {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transform: rotate(90deg); /* Rotate pulses 90 degrees */
+    }
+
+    .pulse {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      background: rgba(255, 255, 255, 0.15);
+      animation: pulse 2s ease-out infinite;
+    }
+
+    .pulse:nth-child(1) { animation-delay: -2s; }
+    .pulse:nth-child(2) { animation-delay: -1.5s; }
+    .pulse:nth-child(3) { animation-delay: -1s; }
+
+    @keyframes pulse {
+      0% {
+        transform: scale(0);
+        opacity: 1;
+      }
+      100% {
+        transform: scale(2.5);
+        opacity: 0;
+      }
+    }
+
+    #badge {
+      position: absolute;
+      bottom: 5vh;
+      font-size: 1vw;
+      color: rgba(255, 255, 255, 0.5);
     }
   </style>
 </head>
 <body>
-  <h1>🎵 Spotify Track Preview</h1>
-  <div id="info">Loading...</div>
-  <audio id="player" controls autoplay></audio>
+  <audio id="player" preload="none"></audio>
 
-  <script type="module" src="spotify-preview.mjs"></script>
+  <div class="button-wrapper">
+    <div class="circle-container" id="circle-container">
+      <div class="pulse"></div>
+      <div class="pulse"></div>
+      <div class="pulse"></div>
+    </div>
+
+    <button id="treble-button">
+      <img src="assets/Website/upscaled_clef.png" alt="Play/Pause" />
+    </button>
+  </div>
+
+  <div id="badge">Powered by Deezer</div>
+
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const trackId = params.get("id");
+    const player = document.getElementById("player");
+    const button = document.getElementById("treble-button");
+    const circles = document.getElementById("circle-container");
+
+    let isPlaying = false;
+
+    if (trackId) {
+      fetch(`http://192.168.0.72:5000/deezer-track?id=${trackId}`)
+        .then(res => res.json())
+        .then(data => {
+          if (!data.preview) return;
+          player.src = data.preview;
+        });
+    }
+
+    button.addEventListener("click", () => {
+      if (isPlaying) {
+        player.pause();
+      } else {
+        player.play();
+      }
+    });
+
+    player.addEventListener("play", () => {
+      isPlaying = true;
+      circles.style.display = "flex";
+    });
+
+    player.addEventListener("pause", () => {
+      isPlaying = false;
+      circles.style.display = "none";
+    });
+
+    circles.style.display = "none";
+  </script>
 </body>
 </html>
