--- a/index.html
+++ b/index.html
@@ -114,8 +114,12 @@
 
     let isPlaying = false;
 
+    const BASE_URL = window.location.hostname.includes("localhost") || window.location.hostname === "127.0.0.1"
+      ? "http://localhost:5000"
+      : "https://your-app-name.onrender.com"; // Replace with your actual Render URL after deploying
+
     if (trackId) {
-      fetch(`http://192.168.0.72:5000/deezer-track?id=${trackId}`)
+      fetch(`${BASE_URL}/deezer-track?id=${trackId}`)
         .then(res => res.json())
         .then(data => {
           if (!data.preview) return;
