--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
     const BASE_URL = window.location.hostname.includes("localhost") || window.location.hostname === "127.0.0.1"
       ? "http://localhost:5000"
-      : "https://your-app-name.onrender.com"; // Replace with your actual Render URL after deploying
+      : "https://song-guesser.onrender.com"; // Replace with your actual Render URL after deploying
 
     if (trackId) {
       fetch(`${BASE_URL}/deezer-track?id=${trackId}`)
