--- a/frontend/index.html
+++ b/frontend/index.html
@@ -589,7 +589,16 @@
     window.addEventListener("DOMContentLoaded", () => {
       loadPlaylists();
       loadLeaderboard();
+
+      // Check if a song ID was passed in the URL
+      const params = new URLSearchParams(window.location.search);
+      const trackId = params.get("id");
+      if (trackId) {
+        console.log("📀 URL contains track ID:", trackId);
+        loadTrackById(trackId);
+      }
     });
+
 
   </script>
 </body>
