--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,6 +41,7 @@
       height: 100vh;
       overflow: hidden;
       font-family: 'Montserrat', sans-serif;
+      padding-top: 1rem;
     }
 
     @font-face {
