fixing fields and font sizes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -278,12 +278,13 @@
     .guess-field {
       background: #222;
       color: white;
-      font-size: 1rem;
+      font-size: 0.9rem;
       padding: 0.5rem 1rem;
       border: none;
       border-radius: 5px;
       width: 60%;
       text-align: center;
+      width: clamp(10rem, 30vw, 18rem);
     }
 
     #guess-container {
@@ -298,7 +299,7 @@
       margin-top: 0.5rem;
       background: #444;
       color: white;
-      font-size: 1rem;
+      font-size: 0.9rem;
       padding: 0.5rem 1rem;
       border: none;
       border-radius: 5px;
